<resources>
    <string name="app_name">Ma réu</string>
    <string name="action_remove_filter">Enlever le filtre</string>
    <string name="action_sort">Trier par</string>
    <string name="action_filter">Filtrer par</string>
    <string name="sort_date_recent">Dates récentes à anciennes</string>
    <string name="sort_date_older">Dates anciennes à récentes</string>
    <string name="sort_room_asc">Salles de A à Z</string>
    <string name="sort_room_desc">Salles de Z à A</string>
    <string name="filter_date">Date sélectionnée</string>
    <string name="filter_room">Salle sélectionnée</string>
    <string name="text_divider"> - </string>
    <string name="action_add_meeting">Réunion ajoutée</string>
    <string name="action_add_meeting_missing_field">Ajout impossible. Des éléments sont manquants ou erronés.</string>
    <string name="meeting_topic">Sujet de la réunion</string>
    <string name="meeting_email">Adresse mail</string>
    <string name="meeting_date">Date</string>
...
    <string name="err_meeting_date_empty">Veuillez saisir la date de la réunion</string>
    <string name="err_meeting_list_empty">Tri ou filtre impossible. La liste est vide.</string>
    <string name="msg_delete_meeting">Voulez-vous supprimer la réunion ?</string>
    <string name="meeting_deleted">Réunion supprimée</string>
    <string name="btn_yes">Oui</string>
    <string name="btn_no">Non</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="meeting_room_selected">Sélection de salles de réunion</string>
    <string name="exit_app_back_pressed">Appuyez encore une fois pour quitter</string>
    <string name="select_room">Sélectionnez une salle de réunion</string>
    <string name="date_time">Date - Heure</string>
    <string name="participants">Participants</string>
...
