...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:ellipsize="end"
...
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/item_delete_img"
        app:layout_constraintStart_toEndOf="@+id/item_location_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_participant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:ellipsize="end"
        android:singleLine="true"
...
